--- a/flanger.html
+++ b/flanger.html
@@ -74,7 +74,9 @@
     <h2>Flanger</h2>
 </header>
 <article class="center">
-    <div style="position: absolute; top: 0; left: 0;"><button>PLAY</button></div>
+    <div style="position: absolute; top: 0; left: 0; ">
+        <button>PLAY</button>
+    </div>
     <div id="controls"></div>
 </article>
 <footer></footer>
