--- a/vocoder.html
+++ b/vocoder.html
@@ -14,18 +14,21 @@
         import {Chord} from "./modules/chord.js";
         import {ParameterKnob} from "./modules/editors.js";
         import {Vocoder, VocoderSpectrum} from "./modules/vocoder.js";
+        import {Limiter} from "./worklets/Limiter.js";
 
         const context = Policy.newAudioContext();
 
         Promise.all([
             fetchMicrophone(),
             Vocoder.request(context, 10),
+            context.audioWorklet.addModule("./worklets/LimiterProcessor.js"),
             context.audioWorklet.addModule("./worklets/PadSynthProcessor.js")
         ]).then(results => {
             const stream = results[0];
             const vocoder = results[1];
             const synth = new PadSynth(context, new PadWorker(16, context.sampleRate, 60.0));
             const micro = context.createMediaStreamSource(stream);
+            const limiter = new Limiter(context);
 
             const modulatorAnalyser = new Analyser(context, true);
             modulatorAnalyser.setHeader("MODULATOR SPECTRUM");
@@ -37,24 +40,26 @@
 
             const outputAnalyser = new Analyser(context, true);
             outputAnalyser.setHeader("OUTPUT SPECTRUM");
-            vocoder.output.connect(outputAnalyser.node).connect(context.destination);
+            vocoder.output.connect(limiter).connect(outputAnalyser.node).connect(context.destination);
 
             synth.connect(vocoder.carrier);
             micro.connect(vocoder.modulator);
 
             Midi.request().then(midi => {
                 const events = Midi.mapAllEvents(midi);
-                events.onNoteOn = (note, velocity) => synth.noteOn(note, 1.0);
+                events.onNoteOn = (note, velocity) => synth.noteOn(note, velocity);
                 events.onNoteOff = (note) => synth.noteOff(note);
             });
 
             replaceElement(modulatorAnalyser.domElement, document.querySelector("div#modulator-spectrum"));
             replaceElement(carrierAnalyser.domElement, document.querySelector("div#carrier-spectrum"));
             replaceElement(new VocoderSpectrum(vocoder).domElement, document.querySelector("div#transform"));
-            replaceElement(new ParameterKnob(vocoder.carrierMinFreq).domElement, document.querySelector("div#carrier-min-freq"));
-            replaceElement(new ParameterKnob(vocoder.carrierMaxFreq).domElement, document.querySelector("div#carrier-max-freq"));
             replaceElement(new ParameterKnob(vocoder.modulatorMinFreq).domElement, document.querySelector("div#modulator-min-freq"));
             replaceElement(new ParameterKnob(vocoder.modulatorMaxFreq).domElement, document.querySelector("div#modulator-max-freq"));
+            replaceElement(new ParameterKnob(vocoder.carrierMinFreq).domElement, document.querySelector("div#carrier-min-freq"));
+            replaceElement(new ParameterKnob(vocoder.carrierMaxFreq).domElement, document.querySelector("div#carrier-max-freq"));
+            replaceElement(new ParameterKnob(vocoder.qScale).domElement, document.querySelector("div#q-scale"));
+            replaceElement(new ParameterKnob(vocoder.envRelease).domElement, document.querySelector("div#env-release"));
             replaceElement(outputAnalyser.domElement, document.querySelector("div#output-spectrum"));
         });
     </script>
@@ -72,10 +77,14 @@
         </div>
         <div>
             <div id="transform"></div>
-            <div id="carrier-min-freq"></div>
-            <div id="carrier-max-freq"></div>
-            <div id="modulator-min-freq"></div>
-            <div id="modulator-max-freq"></div>
+            <div style="display: flex; width: 100%; justify-content: space-around; margin-top: 8px;">
+                <div id="modulator-min-freq"></div>
+                <div id="modulator-max-freq"></div>
+                <div id="carrier-min-freq"></div>
+                <div id="carrier-max-freq"></div>
+                <div id="q-scale"></div>
+                <div id="env-release"></div>
+            </div>
         </div>
         <div id="output-spectrum"></div>
     </div>
